examples/datalog/11_types/27_zero_values.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_zero
Knowledge graph 'test_zero' created.
Switched to knowledge graph: test_zero
> .kg use test_zero
Switched to knowledge graph: test_zero
> +nums[(0,), (1,), (10,)].
Inserted 3 fact(s) into 'nums'.
> computed(N, Plus, Times) :- nums(N), Plus = N + 0, Times = N * 0.
Script error: Query execution failed: Unsafe rule: Atom { relation: "computed", args: [Variable("N"), Variable("Plus"), Variable("Times")] }. Variables ["Plus", "Times"] in head do not appear in positive body atoms.
